gImageReader 2.93 (Apr 30 2014):
 * gImageReader 3.0 beta 4
 * Add possibility to choose multiple recognition languages
 * Add button to show/hide output pane
 * Fix a crash when loading a scanned document
 * Allow toggling spell checking from context menu
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master

gImageReader 2.92 (Mar 19 2014):
 * gImageReader 3.0 beta 3
 * Add replacement-list feature, allowing the user to specify a list of replacements to perform on the recognized text
 * Fix saving output resulting in empty files
 * Fix crashes when rendering PDF files
 * Keep line-breaks if preeded by line-break
 * Fix localization not working on Windows
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master
 
gImageReader 2.91 (Feb 20 2014):
 * gImageReader 3.0 beta 2
 * Improve page-layout autodetection by merging overlapping regions
 * Use native file-chooser dialogs on Gnome/KDE/Windows
 * Allow performing multipage-recognition with page-layout autodetection
 * Fix broken search/replace which caused the application to crash
 * Add Win64 packages
 * Fix some other bugs, full details in commit log: https://github.com/manisandro/gImageReader/commits/master

gImageReader 2.90 (Feb 11 2014):
 * First beta of the grand new gImageReader:
   - Support multiple selections (via CTRL-key). Rightclicking a selection opens a context menu which allows to:
     - Deleted and reordered individual selections.
     - Recognize the selected text, either to clipboard or to the output pane.
   - Basic automatic page layout detection.
   - The output pane now supports undo and redo.
   - Configuration is now automatic.
   - Proper arbitrary rotation of images.
   - Detect deleted/renamed files.
   - Cleaner UI.
   - Port to Gtk+3, rewrite in C++ using the Gtkmm bindings.