@@ -46,6 +46,17 @@
 </ul>
 <h3><a name="News">News</a></h3>
 <p><i>A detailed list of changes can be found in the commit log: https://github.com/manisandro/gImageReader/commits/master</i></p>
+<p>gImageReader 3.0 (Dec 12 2014):</p>
+<ul>
+    <li>gImageReader 3.0 stable</li>
+    <li>New Qt4/5 interface, as alternative to the Gtk interface</li>
+    <li>Fixed scanning on Windows</li>
+    <li>Memorize image settings (brightness, contrast, etc) when switching images</li>
+    <li>Search forward and backward, replace all, case sensitive search</li>
+    <li>Many bug fixes</li>
+    <li>Translation updates</li>
+    <li>Full details in commit log: https://github.com/manisandro/gImageReader/commits/master</li>
+</ul>
 <p>gImageReader 2.93 (Apr 30 2014):</p>
 <ul>
     <li>gImageReader 3.0 beta 4</li>
@@ -166,7 +177,7 @@ If you find an issue or have a suggestion, please file a ticket to the <a href="
 <li>Try to describe as best as you can what you were doing and whether the problem is reproducible.</li>
 </ul>
 <hr />
-<p>Copyright &copy;2009-2014 Sandro Mani, revision: Sat, 29 Nov 2014</p>
+<p>Copyright &copy;2009-2014 Sandro Mani, revision: Sat, 12 Dec 2014</p>
 </body>
 
 </html>
